updating ajax folder to lecture 57

--- a/coursera-test/ajax/index.html
+++ b/coursera-test/ajax/index.html
@@ -1,22 +1,20 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<script type="text/javascript" src="js/script.js"></script>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-
-	<title>First js course!!</title>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <script src="js/ajax-utils.js"></script>
+    <script src="js/script.js"></script>
+  </head>
 <body>
-	<h1 id="title">Lecture 52a</h1>
-	<p>
-		Say hello to
-		<input id="name" type="text" name="inputName">
-		<button>
-			Say it!
-		</button>
-	</p>
-	<div id="content"></div>
+  <h1 id="title">Lecture 57</h1>
+  
+  <p>
+    <button>
+      Say Hello To Someone on the Server!
+    </button>
+  </p>
 
+  
+  <div id="content"></div>
 </body>
 </html>
